--- a/packages/template/views/Header/Navigation.pug
+++ b/packages/template/views/Header/Navigation.pug
@@ -1,10 +1,10 @@
 -
   const guidebook = [
-    { text: '시작하기', href: 'https://tidory.github.io/docs/get-started' },
-    { text: '디렉토리', href: 'https://tidory.github.io/docs/directory' },
-    { text: '템플릿', href: 'https://tidory.github.io/docs/template' },
-    { text: '프레임워크', href: 'https://tidory.github.io/docs/framework' },
-    { text: '빌드 및 배포', href: 'https://tidory.github.io/docs/deployment' }
+    { text: '시작하기', href: 'https://github.com/tidory/tidory/wiki/Getting-Started' },
+    { text: '템플릿', href: 'https://github.com/tidory/tidory/wiki/Templates' },
+    { text: '설정', href: 'https://github.com/tidory/tidory/wiki/Configuration' },
+    { text: '빌드 및 배포', href: 'https://github.com/tidory/tidory/wiki/Deployment' },
+    { text: '프레임워크', href: 'https://github.com/tidory/tidory/wiki/Frameworks' }
   ];
 
 nav(class="mt-9")
